--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,5 @@
 assignment-1/snd-example-src/copy.wav
 # output file for wav_dct
 assignment-1/snd-example-src/out.wav
+# ignore ppm files in assignment2/imgmanipulation-src
+assignment-2/imgmanipulation-src/*.ppm
